--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Common Template</title>
+    
+    <!-- Google Fonts Start -->
+    <!-- Google Fonts End -->
+    
     <!-- All CSS File Start -->
      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <!-- CSS file for fontawesome -->
      <link rel="stylesheet" href="css/all.min.css">
      <link rel="stylesheet" href="css/style.css">
+    <!-- CSS file for Responsive view (media queries) -->
+    <link rel="stylesheet" href="css/media.css">
     <!-- All CSS File End -->
 </head>
 <body>
